--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 target/classes/.netbeans_automatic_build
+target/test-classes/.netbeans_automatic_build
